  .Rnw and .Rmd vignettes (the reports Markdown/HTML vignette was created this 
  way).  Add additional vignettes to the vignettes directory with the 
  `append_vignette` function.

* `QC` quick convert between Pandoc recognized languages.  Meant for a string 
  rather than an entire file.

* `FT` a new function that detects face, color and size and generates a font tag 
  for supplied text.

* `YT` and `VM` are new functions that wraps a YouTube/Vimeo tag or url to 
  generate an HTML iframe tag.

* `IF` a new function that wraps a url to generate an HTML iframe tag.  This is 
  useful for embedding a document within another document.

* `IM`, `IM2`, `IW`, and `IMF` new functions that wraps an image path or url to 
  generate a flexible HTML tag with optional hyperlink.  `IM2` is a wrapper for 
  `IM` and assumes the location of the local image file is in "assets/img/", 
  meaning the user only needs supply the name of the local image. `IMF` attempts 
  to find the image in expected image directories.  `IW` allows for text 
  wrapping of an image.

* The cite family of functions has been introduced.  These functions provide 
  quick pulling of quotes with citations (in Markdown or LaTeX format).  See 
  `?citeL` for more details.

* Conversion functions: `md2docx`, `md2pdf`, `tex2html`, `html2pdf`, `tex2docx`, 
  `md2tex` have been added for a convenient way to convert between file types.

* `rdirs` reclusively creates multiple directories.

* The sync family of functions has been introduced.  These functions provide 
  quick syncing between directories.  See `?sync` for more details.

* `custom_css` function for creating the components necessary for custom css 
  file for use with RStudio + knitr.  See: 
  http://www.rstudio.com/ide/docs/authoring/markdown_custom_rendering

* `css_styles` and `css_style_change` compliment `custom_css`.  The former 
  provides internal style.css files : see https://github.com/trinker/style.css_examples.