@@ -94,3 +94,4 @@ Collate:
     'AD.R'
     'is.url.R'
     'rprof4rpubs.R'
+    'js_copy.R'
