@@ -31,6 +31,7 @@ export(IMF)
 export(is.global)
 export(is.url)
 export(IW)
+export(js_copy)
 export(LL)
 export(local_host)
 export(md2docx)
@@ -74,6 +75,7 @@ export(textciteM)
 export(UF)
 export(update_bib)
 export(US)
+export(VD)
 export(VM)
 export(VS)
 export(WP)
