@@ -1,0 +1,20 @@
+<div id="video-container" style="width: 100%%; margin: 0 auto;">
+  <!-- Video -->
+    <video id="video" width="%s" height="%s">
+    <source src="%s" type="video/mp4">
+      <p>
+        Your browser doesn't support HTML5 video.
+      </p>
+    </video>
+    <!-- Video Controls -->
+    <div id="video-controls" style="width: 91%%"; margin: 0 auto;">
+      %s
+      <button type="button" id="play-pause" class="play">&#9658;</button>
+        <input type="range" id="seek-bar" value="0">
+      <button type="button" id="mute">Mute</button>
+        <input type="range" id="volume-bar" min="0" max="1" step="0.1" value="1">
+      <button type="button" id="full-screen">FS</button>
+    </div>
+</div>
+
+<script src="%s"></script>
